2018.172:
	- Add conversion of epoch values to ms_timestr2nstime().

2019.170: 3.0.6
	- Generalize ms_timestr2nstime() to detect all supported time formats.
	- Rename old ms_timestr2nstime() to ms_mdtimestr2nstime().
	- Change minimum valid year from 1000 to 1678 to avoid wrap-around.
	- ms_nstime2timestr(): fix printing of pre-epoch values for UNIXEPOCH.
	- Add test for time string parsing and conversion.

2019.166: 3.0.5
	- Allow trace list packing with multiple data sample types.

2019.163:
	- Portable printing of size_t values.

2019.162:
	- Re-license all libmseed code under the Apache License V2.0.

2019.161: 3.0.4
	- Add record record list capability, replacing segment-level record metadata.

2019.142:
	- Add ability to pack miniSEED version 2 records.

2019.137:
	- Allow packing records with no payload, i.e. header-only.

2019.135:
	- Add pre-allocation of data buffers, enable on Windows and disable otherwise.

2019.123: 3.0.3
	- Fix version splitting, clarify behavior
	- Fix publication version filtering, thanks @krischer
	- Allow selections without time ranges, thanks @krischer
	- Normalize encoding string lookups, the SEED manual values are messy no need to perpetuate them
	- Add option to build PDF manual and clarifications in documentation
	- Remove steps in install target of Makefile that no longer function, thanks @senshu

2019.103: 3.0.2
	- mstl3_pack() can be called without modifying the Trace List with MSF_MAINTAINMSTL flag.
	- Add lm_pack_rollingbuffer.c example of generating records with a rolling buffer.
	- Consistently provide extra headers as terminated string from MS3Record.extra.
	- Fix segment start time tracking in mstl3_pack().

2019.102: 3.0.1
	- Add mstl3_readbuffer_selection() and fix selection-based ms3_readmsr_selection().
	- Use callback functions for time and sample rate tolerance instead of fixed values.
	- Fix progression of record start time when packing records.