@@ -4,10 +4,14 @@ DYLD_LIBRARY_PATH=.. \
 ./lm_timestr 2004 \
              2004-2-9 \
              2004-05-12T7:8:9.123456788 \
+             1084345689.123456788 \
+             2004-05-12T7:8:9.12345Z \
              2004-05-12T7:8:9.12345 \
              2004-05-12T7:8:9.123 \
              2004-05-12T7:8:9 \
              1969-201T20:17:40.987654321 \
+             -14182939.012345679 \
+             1969-201T20:17:40.98765Z \
              1969-201T20:17:40.98765 \
              1969-201T20:17:40.98 \
              1969-201T20:17:40
