@@ -22,6 +22,22 @@ UNIXEPOCH  : 1084345689.123456788
 NSEPOCH    : 1084345689123456788
 nstime_t   : 1084345689123456788
 
+Input time : 1084345689.123456788
+ISOMONTH   : 2004-05-12T07:08:09.123456788
+ISOMONTH wZ: 2004-05-12T07:08:09.123456788Z
+SEEDORDINAL: 2004,133,07:08:09.123456788
+UNIXEPOCH  : 1084345689.123456788
+NSEPOCH    : 1084345689123456788
+nstime_t   : 1084345689123456788
+
+Input time : 2004-05-12T7:8:9.12345Z
+ISOMONTH   : 2004-05-12T07:08:09.123450
+ISOMONTH wZ: 2004-05-12T07:08:09.123450Z
+SEEDORDINAL: 2004,133,07:08:09.123450
+UNIXEPOCH  : 1084345689.123450
+NSEPOCH    : 1084345689123450000
+nstime_t   : 1084345689123450000
+
 Input time : 2004-05-12T7:8:9.12345
 ISOMONTH   : 2004-05-12T07:08:09.123450
 ISOMONTH wZ: 2004-05-12T07:08:09.123450Z
@@ -53,6 +69,22 @@ SEEDORDINAL: 1969,201,20:17:40.987654321
 UNIXEPOCH  : -14182939.012345679
 NSEPOCH    : -14182939012345679
 nstime_t   : -14182939012345679
+
+Input time : -14182939.012345679
+ISOMONTH   : 1969-07-20T20:17:40.987654321
+ISOMONTH wZ: 1969-07-20T20:17:40.987654321Z
+SEEDORDINAL: 1969,201,20:17:40.987654321
+UNIXEPOCH  : -14182939.012345679
+NSEPOCH    : -14182939012345679
+nstime_t   : -14182939012345679
+
+Input time : 1969-201T20:17:40.98765Z
+ISOMONTH   : 1969-07-20T20:17:40.987650
+ISOMONTH wZ: 1969-07-20T20:17:40.987650Z
+SEEDORDINAL: 1969,201,20:17:40.987650
+UNIXEPOCH  : -14182939.012350
+NSEPOCH    : -14182939012350000
+nstime_t   : -14182939012350000
 
 Input time : 1969-201T20:17:40.98765
 ISOMONTH   : 1969-07-20T20:17:40.987650
